ingress/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host : localhost
      http:
        paths:
          - path: /httpenv
            pathType: Prefix
            backend:
              service:
                name: http-env
                port:
                  number: 8080
